# fcbuttons

./: .gitignore  Cargo.toml  Makefile  README.md  fadecandy.service  fcbuttons.service
config/: autoconnect.conf  wifi-recover.sh  wifi-watchdog.service  wifi-watchdog.sh
playlists/: 0 random #ff0000 #f0ff00 #0fff00 #0046ce #9900c9.m3u  02 red-balloons #00ff00.m3u  03 blue-bugs #0000ff.m3u  04 noris-favorites #ff0000.m3u  08 talias-favorites #00ffff.m3u  10 Encanto #3f4f82 #a28bb9 #40abb1 #aecb9b #55a491.m3u  12 frozen #59ACD2 #ACE5EE #ffffff.m3u  13 frozen 2 #59ACD2 #ACE5EE #71A6D2.m3u  14 Moana #ce491c #c59b79 #40b4fb #cafbff.m3u  15 Moana 2 #272727 #ce491c #c59b79 #40b4fb #cafbff.m3u  18 Wish #e5836a #cbb659 #8b9e4a #41955e #30be7d.m3u  20 #3DBA7B music together fiddle.m3u  21 #F06B95 music together triangle.m3u  98 dtmf #4895c7.m3u  99 random #ff0000 #f0ff00 #0fff00 #0046ce #9900c9.m3u
src/: buttons.rs  easyopc.rs  lightstrip.rs  main.rs  modes.rs  music.rs
src/modes/: color.rs  color_chase.rs  idle.rs  music.rs
