[package]
name = "fcbuttons"
version = "0.1.0"
authors = ["Amiel Martin <amiel.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.5"
mpd = "0.0.12"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4.0"
opc = "0.3"
bytes = "0.4.12"
tokio-io = "0.1.13"


